--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ line-height
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
+        <p>the only <b>limit</b> is your <b class="imagination">imagination!</b></p>
     </div>
 
     <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
